Support Java 8 (still requires >9 to compile)